# prompt-ninja

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml
backend/: .env.example  LICENSE  README.md  pyproject.toml
backend/app/: agents.py  brief_enhancement.py  cli.py  extractors.py  main.py  model_config.py  models.py  prompt_catalog.py  prompt_compiler.py  prompt_export.py  prompt_ninja.py  prompt_testing.py
backend/prompt_ninja/: __init__.py  agents.py  brief_enhancement.py  cli.py  core.py  extractors.py  main.py  model_config.py  models.py  prompt_artifacts.py  prompt_catalog.py  prompt_compiler.py  prompt_export.py  prompt_testing.py
backend/prompt_ninja/hooks/: __init__.py  runtime.py  sampled_eval.py  usage.py
backend/prompt_ninja/prompts/: brief-enhancer.prompt.toml  creator-1.prompt.toml  creator-2.prompt.toml  creator-3.prompt.toml  greeting.prompt.toml  judge.prompt.toml  prompt-compiler.prompt.toml  prompt-repair.prompt.toml  prompt-updater.prompt.toml  requirements.prompt.toml  requirements.prompt.toml.bak  sampled-run-judge.prompt.toml  test-case-generator.prompt.toml  test-judge.prompt.toml
backend/prompts/: brief-enhancer.prompt.toml  creator-1.prompt.toml  creator-2.prompt.toml  creator-3.prompt.toml  greeting.prompt.toml  judge.prompt.toml  prompt-compiler.prompt.toml  prompt-updater.prompt.toml  requirements.prompt.toml  test-case-generator.prompt.toml  test-judge.prompt.toml
backend/tests/: test_brief_enhancement.py  test_cli.py  test_council_prompts.py  test_model_config.py  test_prompt_artifacts.py  test_prompt_compiler.py  test_prompt_export.py  test_prompt_ninja.py  test_prompt_testing.py  test_public_api.py  test_sampled_eval_hook.py  test_usage_hook.py
docs/: reference.md
examples/: run_receipts.py  run_triage.py  sample-receipts.json  sample-tickets.json
examples/prompts/: receipt-extract.prompt.toml  receipt_models.py  ticket-triage.prompt.toml  ticket_triage_models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: HooksPage.jsx  main.jsx  styles.css  theme.js
