[project]
name = "prompt-ninja"
version = "0.1.0"
description = "FastAPI backend for the Prompt Ninja to gather to come up with the best prompt"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "click==8.4.2",
  "fastapi==0.115.6",
  "openai>=2.0.0,<3.0.0",
  "pypdf==5.1.0",
  "python-docx==1.1.2",
  "python-dotenv==1.2.1",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.34.0",
]

[project.scripts]
prompt-ninja = "app.cli:cli"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "prompts"

[dependency-groups]
dev = [
  "black>=26.5.1",
  "httpx==0.28.1",
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
