[project]
name = "prompt-ninja"
version = "1.0.1"
description = "Version, validate, and regression-test LLM prompts as software artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["llm", "prompt-engineering", "prompt-testing", "openrouter", "ai"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "click>=8.1,<9",
  "httpx>=0.27,<1",
  "openai>=2.0.0,<3.0.0",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "rich>=13.7,<15",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115,<1",
  "pypdf>=5.1,<6",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.urls]
Homepage = "https://github.com/haami-com/prompt-ninja"
Repository = "https://github.com/haami-com/prompt-ninja"
Issues = "https://github.com/haami-com/prompt-ninja/issues"

[project.scripts]
prompt-ninja = "prompt_ninja.cli:cli"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prompt_ninja"]
exclude = ["*.bak"]

[tool.hatch.build.targets.sdist]
include = ["prompt_ninja", "tests", "README.md", "LICENSE"]

[dependency-groups]
dev = [
  # The suite covers the FastAPI surface, so development installs always pull
  # the server extra; `uv sync` enables the dev group by default.
  "prompt-ninja[server]",
  "black>=26.5.1",
  "httpx==0.28.1",
  "pytest==8.3.4",
]

[tool.uv.sources]
prompt-ninja = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]
